@@ -43,3 +43,4 @@ OTHER CONTRIBUTORS
         Andrea Suatoni
 	Paul Sydney
 	Jim Wilson
+	Ken Yarnall
